<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/searchingPartNumberCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NumberLabel"/>

            <EditText
                android:id="@+id/searchingPartNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/partNumberHint"
                android:selectAllOnFocus="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/searchingPartDescriptionCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DescriptionLabel"/>

            <EditText
                android:id="@+id/searchingPartDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/DescriptionHint"
                android:selectAllOnFocus="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/DialogSearchTypeCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TypeLabel"/>

            <EditText
                android:id="@+id/DialogSearchTypeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/TypeHint"
                android:selectAllOnFocus="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/DialogSearchProducerCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ProducerLabel"/>

            <EditText
                android:id="@+id/DialogSearchProducerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ProducerHint"
                android:selectAllOnFocus="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/DialogSearchSupplierCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SupplierLabel"/>

            <EditText
                android:id="@+id/DialogSearchSupplierText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/SupplierHint"
                android:selectAllOnFocus="true"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>