<resources>
    <string name="AppName">Spare Parts Warehouse</string>
    <string name="NoChosenFileLabel">No file chosen</string>
    <string name="DefaultPartPrefix" translatable="false">Y</string>
    <string name="DefaultSheetName" translatable="false">Sheet1</string>
    <string name="DefaultNumberColumn" translatable="false">0</string>
    <string name="DefaultTypeColumn" translatable="false">8</string>
    <string name="DefaultDescriptionColumn" translatable="false">1</string>
    <string name="DefaultProducerColumn" translatable="false">2</string>
    <string name="DefaultLocationColumn" translatable="false">7</string>
    <string name="DefaultSupplierColumn" translatable="false">2</string>
    <string name="NumberOfSparePartsInDbLabel">Number of spare parts:</string>
    <string name="ChooseFileButtonLabel">Choose file</string>
    <string name="NameOfSheetLabel">Name of sheet:</string>
    <string name="ColumnOfNumberLabel">Column of part number:</string>
    <string name="ColumnOfTypeLabel">Column of type:</string>
    <string name="ColumnOfDescriptionLabel">Column of description:</string>
    <string name="ColumnOfProducerLabel">Column of producer:</string>
    <string name="ColumnOfLocationLabel">Column of location:</string>
    <string name="ColumnOfSupplierLabel">Column of supplier:</string>
    <string name="NumberLabel">Part number:</string>
    <string name="DescriptionLabel">Description:</string>
    <string name="TypeLabel">Type:</string>
    <string name="ProducerLabel">Producer:</string>
    <string name="SupplierLabel">Supplier:</string>
    <string name="QuantityLabel">Quantity:</string>
    <string name="AddExcelFileTitle">Add excel file</string>
    <string name="AddSpPartToBasket">Add spare part to basket</string>
    <string name="ClearDatabaseTitle">Clear Database</string>
    <string name="ClearBasketTitle">Clear</string>
    <string name="SimpleSearchInDatabaseTitle">Search In Database</string>
    <string name="ShowBasketTitle">Show basket</string>
    <string name="PartPrefixLabel">Part prefix:</string>
    <string name="ErrorLabel">Error!</string>
    <string name="NoFileFoundLabel">No file found.</string>
    <string name="NoSheetFound">No sheet of typed name found. Please check the name.</string>
    <string name="NoDataLabel">No data</string>
    <string name="OkLabel" translatable="false">OK</string>
    <string name="ChooseExcelFileLabel">Choose Excel file:</string>
    <string name="ResetToDefaultLabel">Reset\nto default</string>
    <string name="CancelLabel">Cancel</string>
    <string name="YouNeedChooseXlsFile">You need to choose file with xls extension!</string>
    <string name="XlsExtension" translatable="false">.xls</string>
    <string name="LoadingLabel">Loading</string>
    <string name="WaitWhileLoadingLabel">Wait while loading...</string>
    <string name="LoadedLabel">Loaded:</string>
    <string name="SparePartsLabel">" spare parts"</string>
    <string name="SearchLabel">Search:</string>
    <string name="ClearLabel">Clear</string>
    <string name="NoSparePartFoundLabel">No spare part found.</string>
    <string name="TypeHint">type</string>
    <string name="DescriptionHint">description</string>
    <string name="ProducerHint">producer</string>
    <string name="SupplierHint">supplier</string>
    <string name="LocationLabel">Location:</string>
    <string name="AreYouSureLabel">Are you sure? All spare parts in database will be deleted.</string>
    <string name="SimpleSearchText">type your text</string>
    <string name="SearchInDatabaseTitle">Detailed Search</string>
    <string name="partNumberHint">part number</string>
    <string name="quantityHint">quantity</string>
    <string name="AddLabel">Add</string>
    <string name="ClearTheBasketLabel">Do you want to clear the whole basket?</string>
    <string name="WarningLabel">Warning</string>
    <string name="WantToDelSpPartFromBasketLabel">Do you want to delete this spare part from basket?</string>
    <string name="QuantityEmptyLabel">Quantity is empty!</string>
    <string name="DeleteLabel">Delete</string>
    <string name="ChangeLabel">Change</string>
    <string name="OverwriteOldSparePartLabel">Overwrite old spare parts with the same number?</string>
    <string name="DelAllSparePartsLabel">Do you want to firstly delete all old spare parts?</string>
    <string name="NoLabel">No</string>
    <string name="BasketEditionLabel">Basket Edition</string>
</resources>
